<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/products_categories_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/shisha_nav"
            android:title="@string/shisha_nav_title" />
        <item
            android:id="@+id/flavors_nav"
            android:title="@string/flavor_nav_title" />

        <item
            android:id="@+id/accessories_nav"
            android:title="@string/accessories_nav_title" />
    </group>

    <group
        android:id="@+id/admin"
        android:checkableBehavior="single">
        <item
            android:id="@+id/product_nav"
            android:title="@string/products_nav_title"/>
        <item
            android:id="@+id/customers_nav"
            android:title="@string/customers_nav_title"/>
        <item
            android:id="@+id/orders_nav"
            android:title="@string/orders_nav_title"/>
    </group>

    <group
        android:id="@+id/cart_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/cart_nav"
            android:title="@string/cartNavTitle"/>
    </group>

</menu>