<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddProductFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addProductToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/addProductTitle"
        app:titleMarginEnd="5dp"
        app:titleMarginStart="5dp"
        app:titleTextColor="@color/oldPrice" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/addProductToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addProductLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/addProductNameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addProductNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addProductDescriptionLabel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/addProductDescriptionLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addProductDescriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textImeMultiLine"
                    android:minLines="3"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addProductPriceLabel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:hint="@string/addProductPriceLabel"
                    android:paddingEnd="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addProductPriceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none|numberDecimal"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addProductOldPriceLabel"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:hint="@string/addProductOldPriceLabel"
                    android:paddingEnd="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addProductOldPriceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none|numberDecimal"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addProductQuantityLabal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/addProductQuantity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addProductquantityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none|number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/addProductCategoryRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/addProductShishaCategoryRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:checked="true"
                        android:text="@string/addProductShishaCategory" />

                    <RadioButton
                        android:id="@+id/addProductFlavorCategoryRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/addProductFlavorCategory" />

                    <RadioButton
                        android:id="@+id/addProductAccessoriesCategoryRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/addProductAccessoriesCategory" />
                </RadioGroup>
            </HorizontalScrollView>

            <Button
                android:id="@+id/addImageProductButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addProductAddImageButtonText"
                app:icon="@drawable/add_dark_clip_art" />

            <Button
                android:id="@+id/removeImageTextButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addProductRemoveImageButton"
                app:icon="@drawable/delete_dark_clip_art" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>